# adaptation.devices.bluetooth-firmware-bcm

./: AUTHORS  CMakeLists.txt  LICENSE.Broadcom  bluetooth-firmware-bcm.manifest  bluetooth-firmware-bcm.rule
debian/: bt-firmware-43xx.install  bt-firmware-43xx.install.in  bt-firmware-43xx.postinst  changelog  control  rules
firmware/: BCM20710A1_001.002.014.0056.0000_Samsung_Tizen_Lite_TEST_ONLY.hcd  BCM4330B1_002.001.003.0013.0000_SS-SLP7-B42_NoExtLNA_37_4MHz-TEST-ONLY.hcd  BCM4334B0_002.001.013.0079.0083.hcd  BCM4334B0_002.001.013.0942.1036.hcd  BCM4334B0_002.001.013.1024.1064.hcd  CMakeLists.txt
firmware/bcm4334w/: BCM43342A1_001.002.003.0987.0000_Murata_Type1CC_ePA_RFtest_LE_7dBm_adj_temp.hcd  BCM43342A1_001.002.003.0987.0000_Samsung_Rinato_Tizen_ePA_RFtest_LE_7dBm.hcd  BCM43342A1_001.002.003.1006.0000_Rintao_G3_ePA.hcd  BCM4334B0_002.001.013.1675.1676_B2_ORC.hcd  BCM4334W0_001.002.003.0013.0016_Ponte_Solo_Semco_B58_Reset_Picky_12dBm.hcd  BCM4334W0_001.002.003.0014.0017_Ponte_Solo_Semco_B58.hcd  BCM4334W0_001.002.003.0014.0017_Ponte_Solo_Semco_B58_13.5dBm.hcd  BCM4334W_001.002.003.0874.0000_ePA_SEMCO_B58_TEST_ONLY.hcd  BCM4334W_001.002.003.0987.0000_Samsung_Rinato_M7_TEST_ONLY_GGPatch.hcd  BCM4334W_001.002.003.0987.1017.hcd  BCM4334W_001.002.003.0997.1024_B58_ePA.hcd  BCM4334W_001.002.003.0997.1027_B58_ePA.hcd  BCM4334W_001.002.003.1005.1084_B58_ePA.hcd  BCM4334W_Generic_37_4MHz_wlcsp_Rinato_ePA_TestOnly.hcd  BCM4334W_Rinato_TestOnly.hcd  configdata_wlcsp_Semco_B58_ePA_TestOnly.hcd
firmware/bcm4335/: BCM4335B0_002.001.006.0233.0234_ORC_RedWood.hcd  ReleaseNotes_BCM4335B0_002.001.006.0233.0234_ORC_Samsung_RedWood_BT4.0_37_4MHz.txt
firmware/bcm4339/: BCM4339_003.001.009.0028.0085_RedWood.hcd  BCM4339_003.001.009.0030.0122_ORC_RedWood.hcd
firmware/bcm4343/: BCM4343A0_001.001.034.0058.0215_ORC_Kiran.hcd
firmware/bcm4343w/: BCM4343A0_001.001.034.0043.0110_ORC_SWB-B59.hcd  BCM4343A0_001.001.034.0044.0125_ORC_Ponte_Solo-3G.hcd  BCM4343A0_001.001.034.0044.0129_ENG_Ponte_Solo-3G.HCD  BCM4343A0_001.001.034.0045.0132_ORC_A4WP_Ponte_Solo-3G.hcd  BCM4343A0_001.001.034.0048.0144_ORC_A4WP_Ponte_Solo-3G.hcd  BCM4343A0_001.001.034.0048.0145_ORC_Ponte_Solo-3G.hcd  BCM4343A1_001.002.009.0005.0006_ENG_SEMCO-B59.hcd  BCM4343A1_001.002.009.0009.0012_ORC_Ponte_Solo-3G.hcd  ReleaseNotes_BCM4343A0_001.001.034.0043.0110_ORC_SEMCO_SWB-B59.txt  ReleaseNotes_BCM4343A0_001.001.034.0045.0132_A4WP_Ponte_Solo-3G.txt  ReleaseNotes_BCM4343A0_001.001.034.0048.0144_A4WP_Ponte_Solo-3G.txt  ReleaseNotes_BCM4343A0_001.001.034.0048.0145_ORC_Ponte_Solo-3G.txt  ReleaseNotes_BCM4343A1_001.002.009.0009.0012_Ponte_Solo-3G.txt
mobile/debian/: changelog
mobile/firmware/: BCM4334B0_002.001.013.0079.0081.hcd  CMakeLists.txt
mobile/scripts/: bt-dev-start-e4412.sh
mobile/set-address/: setbd.c
packaging/: bluetooth-firmware-bcm-e4412.spec  bluetooth-firmware-bcm.spec  bt-firmware-43xx.changes  bt-firmware-43xx.spec
scripts/: CMakeLists.txt  bt-dev-end.sh  bt-dev-start-c210.sh  bt-dev-start-e4412.sh  bt-dev-start-msm8974.sh  bt-dev-start-msm8x26.sh  bt-dev-start-sprdtrum.sh  bt-dev-start.sh  bt-reset-env.sh  bt-set-addr.sh  bt-stack-down.sh  bt-stack-up.sh
scripts/broadcom/: bt-dev-start.sh.broadcom
scripts/mobile/: bt-dev-start-e4412.sh
scripts/wearable/: bt-dev-start-e4412.sh
set-address/: CMakeLists.txt  setbd.c
tools/: CMakeLists.txt  bcmtool.c  bcmtool_4330b1.c  bcmtool_4330b1_m.c  bcmtool_4330b1_w.c  bcmtool_4330b2_w.c  bcmtool_4330b3_w.c  bcmtool_4330m0_m.c
wearable/debian/: bluetooth-firmware-bcm-c210.install  bluetooth-firmware-bcm-c210.postinst.in  bluetooth-firmware-bcm-e4412.install  bluetooth-firmware-bcm-e4412.postinst.in  changelog  control  rules
wearable/firmware/: BCM20710A1_001.002.014.0028.0048.hcd  BCM20710A1_001.002.014.0052.0000_Samsung_Tizen_Lite_TEST_ONLY.hcd  BCM20710A1_001.002.014.0059.0060.hcd  BCM4334B0_002.001.013.0079.0084.hcd  BCM4334B0_002.001.013.0779.0950.hcd  CMakeLists.txt
wearable/firmware/bcm4334w/: BCM43342A1_001.002.003.0874.0000_SEMCO_B58_TEST_ONLY.hcd  BCM4334W_001.002.003.0874.0000_Samsung_Rinato_TEST_ONLY.hcd  BCM4334W_001.002.003.0995.1021_B58_ePA.HCD
wearable/firmware/bcm4335/: BCM4335B0_002.001.006.0203.0206_ORC_JF-LTE.hcd
wearable/firmware/bcm4339/: BCM4339_003.001.009.0025.0053_ORC_H-LTE.hcd
wearable/scripts/: CMakeLists.txt  bt-dev-end.sh  bt-dev-start-c210.sh  bt-dev-start-e4412.sh  bt-dev-start-msm8974.sh  bt-set-addr.sh
wearable/set-address/: setbd.c
wearable/tools/: bcmtool.c  bcmtool_4330b1.c
