CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

FOREACH(flag ${package_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")

ADD_SUBDIRECTORY(set-address)
ADD_SUBDIRECTORY(tools)
ADD_SUBDIRECTORY(firmware)
ADD_SUBDIRECTORY(scripts)

INSTALL(FILES ${CMAKE_SOURCE_DIR}/bluetooth-firmware-bcm.rule DESTINATION /etc/smack/accesses.d)
