# install firmware
# files for c210
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/BCM4334B0_002.001.013.0079.0081.hcd DESTINATION ${PLUGIN_INSTALL_PREFIX}/etc/bluetooth)
#INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/BCM4330B1_002.001.003.0013.0000_SS-SLP7-B42_NoExtLNA_37_4MHz-TEST-ONLY.hcd DESTINATION ${PLUGIN_INSTALL_PREFIX}/etc/bluetooth)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/BCM4330B1_002.001.003.0221.0265.hcd DESTINATION ${PLUGIN_INSTALL_PREFIX}/etc/bluetooth)

# files for e4112 (W)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/BCM20710A1_001.002.014.0059.0060.hcd DESTINATION ${PLUGIN_INSTALL_PREFIX}/etc/bluetooth)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/bcm4334w/BCM4334B0_002.001.013.1675.1676_B2_ORC.hcd DESTINATION ${PLUGIN_INSTALL_PREFIX}/etc/bluetooth)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/bcm4334w/BCM4334W_Rinato_TestOnly.hcd DESTINATION ${PLUGIN_INSTALL_PREFIX}/etc/bluetooth)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/bcm4334w/BCM4334W_001.002.003.0997.1027_B58_ePA.hcd DESTINATION ${PLUGIN_INSTALL_PREFIX}/etc/bluetooth)

# files for msm8974
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/bcm4335/BCM4335B0_002.001.006.0233.0234_ORC_RedWood.hcd DESTINATION ${PLUGIN_INSTALL_PREFIX}/etc/bluetooth)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/bcm4339/BCM4339_003.001.009.0030.0122_ORC_RedWood.hcd DESTINATION ${PLUGIN_INSTALL_PREFIX}/etc/bluetooth)

# files for msm8x26
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/bcm4334w/BCM4334W0_001.002.003.0014.0017_Ponte_Solo_Semco_B58_13.5dBm.hcd DESTINATION ${PLUGIN_INSTALL_PREFIX}/etc/bluetooth)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/bcm4334w/BCM43342A1_001.002.003.1006.0000_Rintao_G3_ePA.hcd DESTINATION ${PLUGIN_INSTALL_PREFIX}/etc/bluetooth)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/bcm4343w/BCM4343A0_001.001.034.0048.0145_ORC_Ponte_Solo-3G.hcd DESTINATION ${PLUGIN_INSTALL_PREFIX}/etc/bluetooth)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/bcm4343w/BCM4343A1_001.002.009.0009.0012_ORC_Ponte_Solo-3G.hcd DESTINATION ${PLUGIN_INSTALL_PREFIX}/etc/bluetooth)
