CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(setbd C)

SET(SRCS setbd.c)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})

INCLUDE(FindPkgConfig)
pkg_check_modules(package REQUIRED glib-2.0 dbus-glib-1 vconf)

FOREACH(flag ${package_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")

FIND_PROGRAM(UNAME NAMES uname)
EXEC_PROGRAM("${UNAME}" ARGS "-m" OUTPUT_VARIABLE "ARCH")
IF("${ARCH}" STREQUAL "arm")
	ADD_DEFINITIONS("-DTARGET")
	MESSAGE("add -DTARGET")
ENDIF("${ARCH}" STREQUAL "arm")

ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
ADD_DEFINITIONS("-DFACTORYFS=\"$ENV{FACTORYFS}\"")
ADD_DEFINITIONS("-DDEBUG_EN")

ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${package_LDFLAGS})

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)

