CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(bcmtool C)

IF (TIZEN_WEARABLE_B2)
SET(SRCS_4330 bcmtool_4330b2_w.c)
ELSEIF (TIZEN_WEARABLE_B3)
SET(SRCS_4330 bcmtool_4330b3_w.c)
ELSE ()
SET(SRCS_4330 bcmtool_4330m0_m.c)
ENDIF (TIZEN_WEARABLE_B2)

SET(BCMTOOL_4330 ${PROJECT_NAME})

SET(PREFIX ${CMAKE_INSTALL_PREFIX})

FIND_PROGRAM(UNAME NAMES uname)
EXEC_PROGRAM("${UNAME}" ARGS "-m" OUTPUT_VARIABLE "ARCH")
IF("${ARCH}" STREQUAL "arm")
	ADD_DEFINITIONS("-DTARGET")
	MESSAGE("add -DTARGET")
ENDIF("${ARCH}" STREQUAL "arm")

ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
ADD_DEFINITIONS("-DFACTORYFS=\"$ENV{FACTORYFS}\"")

ADD_EXECUTABLE(${BCMTOOL_4330} ${SRCS_4330})

TARGET_LINK_LIBRARIES(${BCMTOOL_4330} ${package_LDFLAGS})

# install binary file
INSTALL(TARGETS ${BCMTOOL_4330} DESTINATION ${PLUGIN_INSTALL_PREFIX}/bin)
